# lx

./: CMakeLists.txt  README.md  main.cpp
src/: color.hpp  icons.h  icons.hpp  main.cpp
